# jewerly_bot

./: DEMO_QUERIES.md  README.md  app_streamlit.py  main.py  pyproject.toml
agent/: core.py  prompts.py
data/: db.py  jewelry_ops.db  models.py  schema.sql  seed.sql
mcp_servers/: customers_server.py  notes_server.py  orders_inventory_server.py
tools/: custom_tools.py  customers_tools.py  inventories_tools.py  notes_tools.py  orders_tools.py
